tests/ui/feature-gates/feature-gate-bare-link-kind.stderr
error[E0459]: `#[link]` attribute requires a `name = "string"` argument
  --> $DIR/feature-gate-bare-link-kind.rs:1:1
   |
LL | #[link(kind = "dylib")]
   | ^^^^^^^^^^^^^^^^^^^^^^^ missing `name` argument

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0459`.
